# api/swagger.yaml
@@ -36,7 +36,7 @@ paths:
       tags:
       - event
       summary: Update an existing event
-      operationId: updateevent
+      operationId: updateEvent
       consumes:
       - application/json
       produces:
@@ -61,7 +61,7 @@ paths:
       - event
       summary: Find event by ID
       description: Returns a single event
-      operationId: geteventById
+      operationId: getEventById
       produces:
       - application/json
       - application/xml
@@ -85,7 +85,7 @@ paths:
       tags:
       - event
       summary: Updates a event in the store with form data
-      operationId: updateeventWithForm
+      operationId: updateEventWithForm
       consumes:
       - application/x-www-form-urlencoded
       produces:
@@ -115,7 +115,7 @@ paths:
       tags:
       - event
       summary: Deletes a event
-      operationId: deleteevent
+      operationId: deleteEvent
       produces:
       - application/json
       - application/xml
