# service/EventService.js
@@ -37,7 +37,7 @@ exports.addEvent = function(body) {
  * api_key String  (optional)
  * no response value expected for this operation
  **/
-exports.deleteevent = function(eventId,api_key) {
+exports.deleteEvent = function(eventId,api_key) {
   return new Promise(function(resolve, reject) {
     resolve();
   });
@@ -51,7 +51,7 @@ exports.deleteevent = function(eventId,api_key) {
  * eventId Long ID of event to return
  * returns Event
  **/
-exports.geteventById = function(eventId) {
+exports.getEventById = function(eventId) {
   return new Promise(function(resolve, reject) {
     var examples = {};
     examples['application/json'] = {
@@ -75,7 +75,7 @@ exports.geteventById = function(eventId) {
  * body Event event object that needs to be added to the store
  * no response value expected for this operation
  **/
-exports.updateevent = function(body) {
+exports.updateEvent = function(body) {
   return new Promise(function(resolve, reject) {
     resolve();
   });
@@ -90,7 +90,7 @@ exports.updateevent = function(body) {
  * status String Updated status of the event (optional)
  * no response value expected for this operation
  **/
-exports.updateeventWithForm = function(eventId,name,status) {
+exports.updateEventWithForm = function(eventId,name,status) {
   return new Promise(function(resolve, reject) {
     resolve();
   });
